# ReadmeGen4

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
ReadmeGen3/: ReadmeGen3.txt
src/: main.rs
